removed unnecessary overflow property, added border radius property to correct selector for card back

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,15 +119,6 @@ h1 {
   border-radius: 10px;
 }
 
-.back img {
-
-  width: 100%;
-  height: 100%;
-
-  border-radius: 10px;
-
-  z-index: 2;
-}
 
 .back {
   position: absolute;
@@ -138,7 +129,6 @@ h1 {
   background-color: transparent;
   backface-visibility: hidden;
 
-  border-radius: 10px;
 
   color: black;
   text-align: center;
@@ -149,7 +139,6 @@ h1 {
   -webkit-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
 
-  overflow: scroll;
 
 }
 
@@ -161,6 +150,9 @@ h1 {
 
   width: 100%;
   height: 100%;
+
+  border-radius: 10px;
+
 }
 
 .back > div > p {
@@ -266,7 +258,7 @@ h1 {
   position: relative;
   align-self: flex-end;
 
-  top: ;
+
   left: -520px;
   bottom: 165px;
 }
